--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "default": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": ["dist", "README.md", "LICENSE", "src"],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -p tsconfig.json --watch"
@@ -16,5 +16,16 @@
   "devDependencies": {
     "typescript": "^5.3.3",
     "@types/node": "^20.10.6"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AliSafari-IT/direxpo-core.git",
+    "directory": "packages/direxpo-core"
+  },
+  "keywords": ["direxpo", "file-discovery", "folder-tree", "utilities"],
+  "author": "Ali Safari <asafarim@gmail.com>",
+  "license": "MIT"
 }
