--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,7 +51,8 @@ jobs:
     name: Deploy docs to GitHub Pages
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    # inherits top-level contents: write
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -76,3 +77,4 @@ jobs:
           publish_branch: gh-pages
           publish_dir: demo/dist
           force_orphan: true
+          cname: direxpo-core.asafarim.dev
