--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asafarim/direxpo-core",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "type": "module",
   "exports": {
     ".": {
@@ -18,6 +18,7 @@
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -p tsconfig.json --watch",
     "type-check": "tsc --noEmit",
+    "test": "node --test dist/__tests__/*.test.js",
     "demo": "tsx demo/src/index.ts",
     "build:demo": "tsx demo/src/build.ts",
     "predeploy": "pnpm run build && pnpm run build:demo",
